Substituted LinkedList-appropriate methods in LanguageModelFF.